	* Bugfix: List of available locales contained default locale twice
	* Bugfix: Timerange date selector had to high z-index
	* Bugfix: Detect also links in this format: "mailto:name@domain.com"
	* Bugfix: Archive manager creates now valid zip archives on windows (valid extraction on linux)
	* Bugfix: Contextmenu sub menu works now correct on linux firefox 5
	* Changed: Padding of inline filter forms to prevent layout problems
	* Changed: Only set curl option CURLOPT_FOLLOWLOCATION when safe mode is not enabled
	* Changed: Minimum php version is 5.2.3 (instead only 5.2.0)
	* Changed: Updated highcharts library to 2.1.6
	* Changed: Updated tinyMCE to 3.4.3.2
	* Changed: <a>-tags are now removed from RTE when saving (autolink function rebuilds them when necessary for output)
	* Changed: Logger init position. Init before todoyu is initialized to log init errors. Added check if file logger has a problem. Check for resource instead null
	* Changed: Tabs are now cropped in javascript and use dynamically as much space as available. Removed template label cropping for tabs
	* Changed: Moved javascript object prototype definitions from core/lib/js/prototype.js to core/asset/js/prototypes.js
	* Changed: Session key is now the web path. Multiple todoyu instances on the same server have now different session namespaces
	* Changed: Frequency of a cronjob if given to the job to calculate next expected execution time
	* Changed: Merged duration wizard icon into general sprite
	* Added: Array.prototype.sum()


core 2.1.0 - 2011-06-17
	1. Note: Since release 2.1.0, the todoyu extension repository is enabling us to decouple version updates of the todoyu core and basic extensions from one another.
	Respectively, the core and extensions changelogs are now maintained separately.
	2. Upgrade instruction: When upgrading an existing todoyu installation to 2.1.0 please read the instructions in the file __UPGRADE_TODOYU___READ_THIS_FIRST.txt
	which you'll find in the todoyu root folder.
