@@ -11,6 +11,9 @@ core 2.1.1 - 2011-07-25
 	* Bugfix: Detect also links in this format: "mailto:name@domain.com"
 	* Bugfix: Archive manager creates now valid zip archives on windows (valid extraction on linux)
 	* Bugfix: Contextmenu sub menu works now correct on linux firefox 5
+	* Bugfix: Validate empty dates as valid
+	* Changed: Rename Todoyu.Notification.onValueChange to validateDateFormat
+	* Changed: Rename Todoyu.Notification.observeChange to addValidator
 	* Changed: Padding of inline filter forms to prevent layout problems
 	* Changed: Only set curl option CURLOPT_FOLLOWLOCATION when safe mode is not enabled
 	* Changed: Minimum php version is 5.2.3 (instead only 5.2.0)
@@ -24,6 +27,7 @@ core 2.1.1 - 2011-07-25
 	* Changed: Frequency of a cronjob if given to the job to calculate next expected execution time
 	* Changed: Merged duration wizard icon into general sprite
 	* Added: Array.prototype.sum()
+
 
 
 core 2.1.0 - 2011-06-17
